# osu-dreamer

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  config.yml  ecosystem.config.js  fit.sh  model.py  model.yml  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
lm/: cli.py  config.yml  data.py  model.py
osu/: beatmap.py  sliders.py
osu_dreamer/: __init__.py  __main__.py  data.py  generate.py  model.py
osu_dreamer/audio_encoder/: model.py  model.yml
osu_dreamer/common/: adabelief.py  attn.py  filter.py  fourier_features.py  fsq.py  linear_attn.py  lr_schedule.py  mingru.py  norm.py  residual.py  rms_norm.py  s4d.py  spec_features.py  swiglu.py  unet.py
osu_dreamer/data/: dataset.py  labels.py  load_audio.py  module.py  plot.py  prepare_map.py
osu_dreamer/decoder/: make_batch.py  modal_head.py  model.py  model.yml  sample.py
osu_dreamer/diffusion_model/: audio_features.py  backbone.py  denoiser.py  diffusion.py  encoder.py  model.py  model.yml  modules.py  posterior.py  train.py
osu_dreamer/inference/: artifact.py  model.py
osu_dreamer/latent_model/: contrastive.py  model.py  model.yml  modules.py  sigreg.py  train.py  vae.py
osu_dreamer/lm/: AUDIO_CONTEXT.md  model.py  model.yml
osu_dreamer/model/: __init__.py  __main__.py  audio_features.py  beta_schedule.py  data.py  denoiser.py  diffusion.py  model.py  model.yml  modules.py  vae.py  vq.py
osu_dreamer/modules/: ae.py  attend_label.py  attn.py  backbone.py  cbam.py  derf.py  dit.py  drop_path.py  dropblock.py  film.py  lr_schedule.py  mingru.py  modconv.py  mp.py  muon.py  power_spherical.py  res.py  resnet.py  rff.py  rms_norm.py  spec_features.py  swiglu.py  unet.py  wae.py  wavenet.py
osu_dreamer/osu/: beatmap.py  bezier.py  error.py  hit_objects.py  sliders.py
osu_dreamer/rhythm_model/: __init__.py  diffusion.py  model.py  model.yml
osu_dreamer/scripts/: encode_latents.py  export_inference.py  fit.py  fit_audio_encoder.py  fit_decoder.py  fit_denoiser.py  fit_latent.py  fit_lm.py  fit_rhythm.py  fit_style.py  fit_style_prior.py  fit_vqvae.py  generate_data.py  predict.py
osu_dreamer/signal/: __init__.py  fit_bezier.py  from_beatmap.py  smooth_hit.py  to_beatmap.py  util.py
osu_dreamer/tokens/: __init__.py  dictionary.py  from_beatmap.py  intermediate.py  (+5 more)
scripts/: cli.py  pred.py  server.py  train.py
shell_scripts/: ! Install.bat  Generate Beatmap.bat  Resume Training.bat  Run Training.bat  Tensorboard.bat
windows_scripts/: ! Install.bat  Generate Beatmap.bat  Resume Training.bat  Run Training.bat
(+139 files in other folders)
