[tool.poetry]
name = "osu-dreamer"
version = "5.0"
description = "a diffusion-based ML model for generating osu! maps from raw audio"
authors = ["jason <jason@jwon.xyz>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
pytorch-lightning = "^2.2.2"
jsonargparse = {extras = ["signatures"], version = "^4.28.0"}
einops = "^0.7.0"
click = "^8.1.7"
rosu-pp-py = "^1.1.0"
torch = "^2.4.0"
tinytag = "^1.10.1"
scipy = "~1.13"
nnaudio = "^0.3.3"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
beartype = "^0.18.3"
jaxtyping = "^0.2.28"
tensorboard = "^2.16.2"
matplotlib = "^3.8.4"
ipykernel = "^6.29.4"
librosa = "^0.10.2.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
