[project]
name = "osu-dreamer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.8",
    "datasets>=5.0.0",
    "einops>=0.8.0",
    "jsonargparse[signatures]>=4.36.0",
    "pytorch-lightning>=2.4",
    "resonators>=0.1.1",
    "rosu-pp-py>=2.0.1",
    "scipy>=1.15.1",
    "tinytag>=2.0.0",
    "torch==2.11",
    "torchcodec>=0.14.0",
]

[dependency-groups]
dev = [
    "beartype>=0.19.0",
    "ipykernel>=6.29.5",
    "jaxtyping>=0.2.37",
    "librosa>=0.10.2.post1",
    "matplotlib>=3.10.0",
    "tensorboard>=2.18.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchcodec = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true